--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "apollo-server": "^3.6.7",
+    "apollo-server-core": "^3.6.7",
     "dotenv": "^10.0.0",
     "is-ip": "^3.1.0",
     "lorem-ipsum": "^2.0.4",
